--- a/src/index.html
+++ b/src/index.html
@@ -13,7 +13,7 @@
       rel="stylesheet"
     />
   </head>
-  <body>
+  <body class="text-gray-800">
     <app-root></app-root>
   </body>
 </html>
